# rules-python-2763-repro

./: BUILD.bazel  README.md  WORKSPACE.bazel  pyproject.toml
